<?xml version="1.0"?>
<package format="2">
  <name>jackal_livox_navigation</name>
  <version>0.0.0</version>
  <description>
    Navigation configurations for the Magni robot.
  </description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
